testdata/baselines/reference/submodule/conformance/jsdocTemplateTagDefault.types
//// [tests/cases/conformance/jsdoc/jsdocTemplateTagDefault.ts] ////

=== file.js ===
/**
 * @template {string | number} [T=string] - ok: defaults are permitted
 * @typedef {[T]} A
 */

/** @type {A} */ // ok, default for `T` in `A` is `string`
const aDefault1 = [""];
>aDefault1 : [T]
>[""] : [string]
>"" : ""

/** @type {A} */ // error: `number` is not assignable to string`
const aDefault2 = [0];
>aDefault2 : [T]
>[0] : [number]
>0 : 0

/** @type {A<string>} */ // ok, `T` is provided for `A`
const aString = [""];
>aString : [T]
>[""] : [string]
>"" : ""

/** @type {A<number>} */ // ok, `T` is provided for `A`
const aNumber = [0];
>aNumber : [T]
>[0] : [number]
>0 : 0

/**
 * @template T
 * @template [U=T] - ok: default can reference earlier type parameter
 * @typedef {[T, U]} B
 */

/**
 * @template {string | number} [T] - error: default requires an `=type`
 * @typedef {[T]} C
 */

/**
 * @template {string | number} [T=] - error: default requires a `type`
 * @typedef {[T]} D
 */

/**
 * @template {string | number} [T=string]
 * @template U - error: Required type parameters cannot follow optional type parameters
 * @typedef {[T, U]} E
 */

/**
 * @template [T=U] - error: Type parameter defaults can only reference previously declared type parameters.
 * @template [U=T]
 * @typedef {[T, U]} G
 */

/**
 * @template T
 * @template [U=T] - ok: default can reference earlier type parameter
 * @param {T} a
 * @param {U} b
 */
function f1(a, b) {}
>f1 : <T, U>(a: T, b: U) => void
>a : T
>b : U

 /**
 * @template {string | number} [T=string]
 * @template U - error: Required type parameters cannot follow optional type parameters
 * @param {T} a
 * @param {U} b
 */
function f2(a, b) {}
>f2 : <T extends string | number, U>(a: T, b: U) => void
>a : T
>b : U

/**
 * @template [T=U] - error: Type parameter defaults can only reference previously declared type parameters.
 * @template [U=T]
 * @param {T} a
 * @param {U} b
 */
function f3(a, b) {}
>f3 : <T, U>(a: T, b: U) => void
>a : T
>b : U

